# sparcs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  build.sh  pyproject.toml  requirements.txt  requirements_local.txt  setup.py
.github/workflows/: publish.yml
conf/: array.default.cfg  configs.default.cfg  evaluations.default.cfg  logging.default.cfg  logging.default.conf  model.default.cfg  pv.default.cfg  report.default.cfg  report.default.conf  settings.default.cfg  settings.default.conf  system.default.cfg  weather.default.cfg
doc/: contact.md
lib/debian/: changelog  control  copyright  install  links  postinst  postrm  preinst  rules
lib/etc/cron.d/: sparcs
lib/etc/cron.daily/: sparcs
lib/etc/logrotate.d/: sparcs
lib/etc/systemd/: sparcs.service
lib/usr/lib/tmpfiles.d/: sparcs.conf
penguin/: __init__.py  __main__.py  _var.py  _version.py  application.py  constants.py  input.py  location.py  model.py  plots.py  system.py
penguin/application/: __init__.py
penguin/application/view/: __init__.py  irrigation.py  weather.py
penguin/application/view/agriculture/: __init__.py  area.py  field.py  irrigation.py  soil.py
penguin/application/view/irrigation/: __init__.py  series.py  system.py
penguin/application/view/storage/: __init__.py  water.py
penguin/components/: __init__.py  _var.py  ac.py  constants.py  current.py  dc.py  ees.py  ev.py  storage.py  tes.py  vehicle.py
penguin/components/agriculture/: __init__.py  area.py  field.py  irrigation.py
penguin/components/agriculture/soil/: models.py  moisture.py
penguin/components/agriculture/solar/: __init__.py  array.py  system.py
penguin/components/control/predictive/: __init__.py  model.py  optimization.py
penguin/components/control/predictive/models/: base.py  electrical.py
penguin/components/control/predictive/problem/: tariff_cost.py
penguin/components/control/predictive/problems/: __init__.py  grid_cost.py  grid_cost_old.py  grid_cost_old_stochastic.py
penguin/components/irrigation/: __init__.py  array.py  series.py  system.py  view.py
penguin/components/irrigation/soil/: __init__.py  models.py  moisture.py
penguin/components/pv/: __init__.py  array.py  system.py
penguin/components/pv/db/: __init__.py  base.py  cec.py
penguin/components/solar/: __init__.py  array.py  inverter.py  model.py  system.py
penguin/components/solar/db/: __init__.py  base.py  cec.py
penguin/components/storage/: __init__.py  electrical.py  thermal.py  water.py
penguin/components/weather/: __init__.py  _load.py  epw.py  input.py  tmy.py  validation.py  validator.py  view.py  weather.py
penguin/components/weather/file/: __init__.py  epw.py  tmy.py
penguin/components/weather/static/: __init__.py  epw.py  file.py  tmy.py
penguin/connectors/: __init__.py  papendorf.py
penguin/converters/: __init__.py  papendorf.py
penguin/simulation/: __init__.py
penguin/simulation/report/: __init__.py  yield.py
penguin/simulation/report/plots/: __init__.py  base.py  base_plots.py  color.py  plots.py
pvsys/: __init__.py  _version.py  evaluation.py  input.py  location.py  model.py  report.py  system.py
pvsys/pv/: __init__.py  _cec.txt  cec.py  db.py  system.py
pvsys/weather/: __init__.py  epw.py  tmy.py
sparcs/: __init__.py  _version.py  system.py
sparcs/application/: __init__.py
sparcs/application/view/: __init__.py
sparcs/application/view/agriculture/: irrigation.py
sparcs/components/: __init__.py  meter.py
sparcs/components/agriculture/: __init__.py  area.py  evapotranspiration.py  field.py  irrigation.py
sparcs/components/agriculture/soil/: __init__.py  evapotranspiration.py  models.py  moisture.py
sparcs/components/solar/: __init__.py  array.py  inverter.py  model.py  system.py
sparcs/components/solar/bifacial/: __init__.py  irradiance.py  ray_tracing.py  temperature.py
sparcs/components/solar/db/: _cec.txt
sparcs/components/storage/: electrical.py  thermal.py  water.py
sparcs/components/vehicle/: __init__.py  evse.py
sparcs/components/vehicle/mahle/: __init__.py  charge_big.py
sparcs/components/weather/: input.py
sparcs/components/weather/static/: epw.py  file.py  tmy.py
sparcs/devices/: __init__.py  charge_big.py
th_e_srvy/: __init__.py  _version.py  evaluation.py  location.py  model.py  system.py
th_e_srvy/pv/: __init__.py  cec.py  db.py  system.py
th_e_yield/: __init__.py  _version.py  database.py  location.py  model.py  system.py
th_e_yield/pv/: __init__.py  cec.py  db.py  system.py
