[build-system]
build-backend = "setuptools.build_meta"
requires = ['setuptools >= 61.0', 'versioneer[toml]']

[project]
name = "penguin"
description = """\
This repository provides a set of core functions for several \
Photovoltaic Energy Generation and Utility Integration systems of \
ISC Konstanz e.V."""

authors = [
    {name = "ISC Konstanz e.V."}
]
maintainers = [
    {name = "Adrian Minde", email = "adrian.minde@isc-konstanz.de"}
]

urls.author = "https://isc-konstanz.de"
urls.source = "https://github.com/isc-konstanz/penguin/"
urls.issues = "https://github.com/isc-konstanz/penguin/issues"

classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

readme = "README.md"
requires-python = ">= 3.9"
license.file = "LICENSE"
dynamic = ["version"]


dependencies = [
    "pvlib >= 0.10.1",
    "NREL-PySAM >= 4.0",
    "loris @ git+https://github.com/isc-konstanz/loris.git@v0.9.3"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff"
]

[tool.setuptools.package-data]
penguin = []

[tool.setuptools.packages.find]
namespaces = false
exclude = [
    "doc",
    "data*"
]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "penguin/_version.py"
versionfile_build = "penguin/_version.py"
parentdir_prefix = "penguin-"
tag_prefix = "v"

[project.scripts]
penguin = "penguin.__main__:main"

[tool.autoflake]
expand-star-imports = true
remove-unused-variables = true
ignore-init-module-imports = true
remove-all-unused-imports = true

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["penguin"]
known_first_party = ["penguin", "loris", "numpy", "pandas", "pytz"]
extra_standard_library = ["dateutil"]

[tool.black]
target-version = ["py39"]
line-length = 120
